# api/docs/swagger.json
@@ -12,7 +12,7 @@
         },
         "version": "dev-4.19.23"
     },
-    "host": "http://vap.api.dewberryanalytics.com",
+    "host": "localhost:5050",
     "basePath": "/",
     "paths": {
         "/": {
@@ -75,14 +75,14 @@
                 "tags": [
                     "jobs"
                 ],
-                "summary": "Summary of all (cached) Jobs",
+                "summary": "Summary of all (active) Jobs",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/jobs.jobStatus"
+                                "$ref": "#/definitions/jobs.JobRecord"
                             }
                         }
                     }
@@ -91,7 +91,7 @@
         },
         "/jobs/{jobID}": {
             "get": {
-                "description": "[Job Results Specification](https://docs.ogc.org/is/18-062r2/18-062r2.html#sc_retrieve_job_results)",
+                "description": "[xxx Specification](https://docs.ogc.org/is/18-062r2/18-062r2.html#sc_retrieve_status_info)",
                 "consumes": [
                     "*/*"
                 ],
@@ -101,12 +101,12 @@
                 "tags": [
                     "jobs"
                 ],
-                "summary": "Job Results",
+                "summary": "Job Status",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/jobs.jobResponse"
+                            "$ref": "#/definitions/handlers.jobResponse"
                         }
                     }
                 }
@@ -127,7 +127,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/jobs.jobResponse"
+                            "$ref": "#/definitions/handlers.jobResponse"
                         }
                     }
                 }
@@ -155,6 +155,29 @@
                 }
             }
         },
+        "/jobs/{jobID}/results": {
+            "get": {
+                "description": "[Job Results Specification](https://docs.ogc.org/is/18-062r2/18-062r2.html#sc_retrieve_job_results)",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "jobs"
+                ],
+                "summary": "Job Results",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.jobResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/processes": {
             "get": {
                 "description": "[Process List Specification](https://docs.ogc.org/is/18-062r2/18-062r2.html#sc_process_list)",
@@ -172,10 +195,8 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/jobs.Info"
-                            }
+                            "type": "object",
+                            "additionalProperties": true
                         }
                     }
                 }
@@ -207,7 +228,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/jobs.ProcessDescription"
+                            "$ref": "#/definitions/processes.processDescription"
                         }
                     }
                 }
@@ -230,7 +251,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/jobs.jobResponse"
+                            "$ref": "#/definitions/handlers.jobResponse"
                         }
                     }
                 }
@@ -238,7 +259,79 @@
         }
     },
     "definitions": {
-        "jobs.Info": {
+        "handlers.jobResponse": {
+            "type": "object",
+            "properties": {
+                "jobID": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "outputs": {},
+                "processID": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string",
+                    "default": "process"
+                },
+                "updated": {
+                    "type": "string"
+                }
+            }
+        },
+        "jobs.JobLogs": {
+            "type": "object",
+            "properties": {
+                "api_logs": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "container_logs": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "jobID": {
+                    "type": "string"
+                }
+            }
+        },
+        "jobs.JobRecord": {
+            "type": "object",
+            "properties": {
+                "host": {
+                    "type": "string"
+                },
+                "jobID": {
+                    "type": "string"
+                },
+                "mode": {
+                    "type": "string"
+                },
+                "processID": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string",
+                    "default": "process"
+                },
+                "updated": {
+                    "type": "string"
+                }
+            }
+        },
+        "processes.Info": {
             "type": "object",
             "properties": {
                 "description": {
@@ -267,22 +360,22 @@
                 }
             }
         },
-        "jobs.Input": {
+        "processes.Input": {
             "type": "object",
             "properties": {
                 "literalDataDomain": {
-                    "$ref": "#/definitions/jobs.LiteralDataDomain"
+                    "$ref": "#/definitions/processes.LiteralDataDomain"
                 }
             }
         },
-        "jobs.Inputs": {
+        "processes.Inputs": {
             "type": "object",
             "properties": {
                 "id": {
                     "type": "string"
                 },
                 "input": {
-                    "$ref": "#/definitions/jobs.Input"
+                    "$ref": "#/definitions/processes.Input"
                 },
                 "maxOccurs": {
                     "type": "integer"
@@ -295,51 +388,7 @@
                 }
             }
         },
-        "jobs.JobLogs": {
-            "type": "object",
-            "properties": {
-                "api_log": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "container_log": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                }
-            }
-        },
-        "jobs.jobStatus": {
-            "type": "object",
-            "properties": {
-                "commands": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "jobID": {
-                    "type": "string"
-                },
-                "processID": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "string"
-                },
-                "type": {
-                    "type": "string",
-                    "default": "process"
-                },
-                "updated": {
-                    "type": "string"
-                }
-            }
-        },
-        "jobs.Link": {
+        "processes.Link": {
             "type": "object",
             "properties": {
                 "href": {
@@ -356,18 +405,18 @@
                 }
             }
         },
-        "jobs.LiteralDataDomain": {
+        "processes.LiteralDataDomain": {
             "type": "object",
             "properties": {
                 "dataType": {
                     "type": "string"
                 },
                 "valueDefinition": {
-                    "$ref": "#/definitions/jobs.ValueDefinition"
+                    "$ref": "#/definitions/processes.ValueDefinition"
                 }
             }
         },
-        "jobs.Output": {
+        "processes.Output": {
             "type": "object",
             "properties": {
                 "formats": {
@@ -378,7 +427,7 @@
                 }
             }
         },
-        "jobs.Outputs": {
+        "processes.Outputs": {
             "type": "object",
             "properties": {
                 "id": {
@@ -389,40 +438,25 @@
                     "type": "string"
                 },
                 "output": {
-                    "$ref": "#/definitions/jobs.Output"
+                    "$ref": "#/definitions/processes.Output"
                 },
                 "title": {
                     "type": "string"
                 }
             }
         },
-        "jobs.ProcessDescription": {
+        "processes.Resources": {
             "type": "object",
             "properties": {
-                "info": {
-                    "$ref": "#/definitions/jobs.Info"
+                "cpus": {
+                    "type": "number"
                 },
-                "inputs": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/jobs.Inputs"
-                    }
-                },
-                "links": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/jobs.Link"
-                    }
-                },
-                "outputs": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/jobs.Outputs"
-                    }
+                "memory": {
+                    "type": "integer"
                 }
             }
         },
-        "jobs.ValueDefinition": {
+        "processes.ValueDefinition": {
             "type": "object",
             "properties": {
                 "anyValue": {
@@ -436,28 +470,35 @@
                 }
             }
         },
-        "jobs.jobResponse": {
+        "processes.processDescription": {
             "type": "object",
             "properties": {
-                "jobID": {
+                "image": {
                     "type": "string"
                 },
-                "message": {
-                    "type": "string"
+                "info": {
+                    "$ref": "#/definitions/processes.Info"
                 },
-                "outputs": {},
-                "processID": {
-                    "type": "string"
+                "inputs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/processes.Inputs"
+                    }
                 },
-                "status": {
-                    "type": "string"
+                "links": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/processes.Link"
+                    }
                 },
-                "type": {
-                    "type": "string",
-                    "default": "process"
+                "maxResources": {
+                    "$ref": "#/definitions/processes.Resources"
                 },
-                "updated": {
-                    "type": "string"
+                "outputs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/processes.Outputs"
+                    }
                 }
             }
         }
